actually finished handlebars this time, still need to add css

--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -21,7 +21,9 @@
     <div>
         <p>
             <img {{game.thumb}}>
-            <a href="./search.handlebars/{{game.id}}">{{game.title}}></a>
+        </p>
+        <p>
+            <a href="/search/{{game.id}}">{{game.title}}></a>
         </p>
     </div>
 </div>
