--- a/views/search.handlebars
+++ b/views/search.handlebars
@@ -6,6 +6,10 @@
     <div class="col">
         <h2>{{game.title}}</h2>
     </div>
+
+    <div class="col">
+        <button class="btn">Add to Favorites</button>
+    </div>
 </div>
     
 <div class="row">
