Added partial files for favorite.js

--- a/views/favorites.handlebars
+++ b/views/favorites.handlebars
@@ -5,7 +5,7 @@
                 <img {{game.thumb}}>
             </p>
             <p>
-                <a href="./search/{{game.id}}">{{game.title}}></a>
+                <a href="./favorites/{{game.id}}">{{game.title}}></a>
             </p>
         </div>
         <div class="col">
@@ -15,3 +15,4 @@
 </div>
 
 <script src="/GameDeals/public/js/search.js"></script>
+<script src="/GameDeals/public/js/favorites.js"></script>
