added tailwind to handlebars and changed layout

--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -1,15 +1,15 @@
-<div class="row">
-    <div class="col-auto">
+<div>
+    <div class="flex justify-center py-3 text-4xl text-slate-800">
         <h2>Search for a game</h2>
     </div>
 </div>
 
 <div>
-    <div>
-        <form class="form search-game-form">
+    <div class="flex justify-center border-red-500">
+        <form class="form search-game-form ">
             <div>
-                <input class="form-input" type="text" name="game-search" placeholder="Search" />
-                <button type="submit"  class="btn">Submit</button>
+                <input class="form-input bg-gray-200 border-2 py-1 border-black" type="text" name="game-search" placeholder="Search" />
+                <button type="submit"  class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded" >Submit</button>
             </div>
         </form>
     </div>
@@ -29,5 +29,3 @@
 </div>
 {{/each}}
 {{/if}}
-
-<script src="/GameDeals/public/js/search.js"></script>
