--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -5,33 +5,44 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>GameDeals</title>
-    <link rel="stylesheet" href="/public/css/style.css">
+    <script src="https://cdn.tailwindcss.com"></script>
+    <link rel="stylesheet" href="/css/style.css">
 </head>
 
-<body>
+<body class="bg-gray-200">
     <div>
-        <header>
-            <h1>
-                Game Deals
-            </h1>
-            <nav>
+        <header class="bg-slate-800">
+            <nav class="flex items-end justify-between text-gray-300 pb-4">
+                <div class="text-slate-800">helloooooooooooooo</div>
+                <h1 class="text-6xl ">
+                    Game Deals
+                </h1>
+                
                 {{#if logged_in}}
-                <a href="/favorites">favorites</a> |
-                <button class="" id="logout">logout</button>
+                <div class="pr-3 text-lg">
+                <a href="/">Home</a>
+                <a href="/favorites">Favorites</a> |
+                <button class="btn" id="logout">Logout</button>
+                {{else}}
+                
                 {{/if}}
+                </div>
             </nav>
         </header>
+
         <main>
             {{{ body }}}
         </main>
+        
         <footer>
 
         </footer>
     </div>
 
     {{#if logged_in}}
-    <script src="/public/js/logout.js"></script>
+    <script src="/js/logout.js"></script>
     {{/if}}
+    
 </body>
 
 </html>
