Added search.js and some code for favorite.js

--- a/views/search.handlebars
+++ b/views/search.handlebars
@@ -19,26 +19,26 @@
                 <tbody>
                     <tr>
                         <td>
-                            <span>{{storeID}}</span>
+                            <span>Steam</span>
                         </td>
                         <td>
-                            <span>{{salePrice}}</span>
-                        </td>
-                    </tr>
-                    <tr>
-                        <td>
-                            <span>{{storeID}}</span>
-                        </td>
-                        <td>
-                            <span>{{salePrice}}</span>
+                            <span>{{game.steamPrice}}</span>
                         </td>
                     </tr>
                     <tr>
                         <td>
-                            <span>{{storeID}}</span>
+                            <span>Humble Store</span>
                         </td>
                         <td>
-                            <span>{{salePrice}}</span>
+                            <span>{{game.humblePrice}}</span>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td>
+                            <span>GOG</span>
+                        </td>
+                        <td>
+                            <span>{{game.gogPrice}}</span>
                         </td>
                     </tr>
                 </tbody>
