Added node-fetch for backend

--- a/views/search.handlebars
+++ b/views/search.handlebars
@@ -5,7 +5,7 @@
     alt="thumbnail for game">
     
     <div class="pb-5 text-5xl">
-        <h2>game title</h2>
+        <h2>{{game.gtitle}}</h2>
     </div>
     <div>
         <button type='submint' class="bg-yellow-300 hover:bg-yellow-500 text-white font-bold py-2 px-4 rounded">Add to Favorites</button>
