--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -17,13 +17,13 @@
 
 {{#if games.length}}
 {{#each games as |game|}}
-<div class="flex flex-col items-center justify-center">
-    <img src="{{game.thumb}}"
+<div class="flex flex-col items-center justify-center" id="appendCard">
+    <img src="{{games.thumb}}"
     class="p-1 border rounded object-scale-down h-20 w-20"
     alt="thumbnail for game image">
         
     <div class="pb-5 text-4xl">
-        <a href="/search/{{game.id}}">{{game.title}}</a>
+        <a href="/search/{{games.id}}">{{games.gtitle}}</a>
     </div>
 </div>
 {{/each}}
