--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -15,18 +15,18 @@
     </div>
 </div>
 
-{{#if games.length}}
-{{#each games as |game|}}
+{{!-- {{#if games.length}} --}}
+{{#each games}}
 <div class="flex flex-col items-center justify-center" id="appendCard">
-    <img src="{{games.thumb}}"
+    <img src="{{this.thumb}}"
     class="p-1 border rounded object-scale-down h-20 w-20"
     alt="thumbnail for game image">
         
     <div class="pb-5 text-4xl">
-        <a href="/search/{{games.id}}">{{games.gtitle}}</a>
+        <a href="/search/{{this.id}}">{{this.gtitle}}</a>
     </div>
 </div>
 {{/each}}
-{{/if}}
+{{!-- {{/if}} --}}
 
 <script src="./js/search.js"></script>
