--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -18,7 +18,7 @@
 {{#each games}}
 <div class="flex flex-col items-center justify-center" id="appendCard">
     <img src="{{this.thumb}}"
-    class="p-1 border rounded object-scale-down h-20 w-20"
+    class="p-1 border rounded"
     alt="thumbnail for game image">
         
     <div class="pb-5 text-4xl">
@@ -27,8 +27,6 @@
 </div>
 {{/each}}
 {{!-- {{/if}} --}}
-=======
-<div class="flex flex-col items-center justify-center" id="appendCard">
 
 <script
   src="https://code.jquery.com/jquery-3.6.0.min.js"
