Testing push and pull

--- a/views/favorites.handlebars
+++ b/views/favorites.handlebars
@@ -1,4 +1,4 @@
-<div class="removeFavorite">
+<div id="remove-favorite">
 {{#each games}} 
 <div class="flex flex-col items-center justify-center pb-4">
   
