Favorite is now working

--- a/views/search.handlebars
+++ b/views/search.handlebars
@@ -38,4 +38,4 @@
 </div>
 
 <script src='../js/search.js'></script>
-<script src='../js/favorites.js'></script>
+<script src='../js/addFavorite.js'></script>
